--- a/ICR130/javascript/Calculator/calculate.html
+++ b/ICR130/javascript/Calculator/calculate.html
@@ -1,146 +1,61 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./c.css">
-    <link rel="scriptsheet" href="./c.js">
-    <style>
-        h2 {
-            text-align: center;
-            color: red;
-        }
-    </style>
 
-</head>
+<!--this can't work! -->
 
-<body>
 
-    <h2>Calculator</h2>
-    <table>
-        <tr style="height:80px">
-            <th colspan="4">
-                <input id="btnTxt" type="button" value="" onclick="getNumber()">
-            </th>
-        </tr>
-        <tr>
-            <td>
-                <input id="btn0" type="button" value="0" onclick="getNumber()">
-            </td>
-            <td>
-                <input id="btnC" type="button" value="C" onclick="getNumber()">
-            <td>
-                <input id="btnA" type="button" value="+" onclick="getNumber()">
-            </td>
-            <td>  
-                <input id="btnM" type="button" value="-" onclick="getNumber()">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <input id="btn1" type="button" value="1" onclick="getNumber()">
-            </td>
-            <td>
-                <input id="btn2" type="button" value="2" onclick="getNumber()">
-            </td>
-            <td> 
-                <input id="btn3" type="button" value="3" onclick="getNumber()">
-            </td>
-            <td>   
-                <input id="btnP" type="button" value="*" onclick="getNumber()">
-            </td>
-        </tr>
-        <tr>
-            <td>  
-                <input id="btn4" type="button" value="4" onclick="getNumber()">
-            </td>
-            <td>     
-                <input id="btn5" type="button" value="5" onclick="getNumber()">
-            </td>
-            <td>    
-                <input id="btn6" type="button" value="6" onclick="getNumber()">
-            </td>
-            <td>    
-                <input id="btnD" type="button" value="/" onclick="getNumber()">
-            </td>
-        </tr>
-        <tr>
-            <td> 
-                <input id="btn7" type="button" value="7" onclick="getNumber()">
-            </td>
-            <td> 
-                <input id="btn8" type="button" value="8" onclick="getNumber()">
-            </td>
-            <td>
-                <input id="btn9" type="button" value="9" onclick="getNumber()">
-            </td>
-            <td>
-                <input id="btnE" type="button" value="=" onclick="getNumber()">
-            </td>
-        </tr>
-    </table>
+<html lang="en-ca">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Calculator</title>
+        <link rel="stylesheet" href="./c.css">
+        <script src="./c.js"></script> 
+        <style>
+            h2 {
+                text-align: center;
+                color: rgb(42, 16, 192);
+            }
+        </style>     
+        <script> src="./c.js"</script>
+    </head>
+    <body>
+        <h2>Calculator</h2>
 
-<!--right
-<table style="width: 30%"> 
-    
-        <tr style="height:80px">
-            <th colspan="4"></th>
-        </tr>
-        <tr>
-            <td>
-                <button type="button" onclick="myFunction()">0</button>
-            </td>
-            <td>
-                <button type="button" onclick="myFunction()">C</button></th> 
-            <td>
-                <button type="button" onclick="myFunction()">+</button></th> 
-            </td>
-            <td>  
-                <button type="button" onclick="myFunction()">-</button></th>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <button type="button" onclick="myFunction()">1</button></th> 
-            </td>
-            <td>
-                <button type="button" onclick="myFunction()">2</button></th> 
-            </td>
-            <td> 
-                <button type="button" onclick="myFunction()">3</button></th> 
-            </td>
-            <td>   
-                <button type="button" onclick="myFunction()">*</button></th> 
-            </td>
-        </tr>
-        <tr>
-            <td>  
-                <button type="button" onclick="myFunction()">4</button></th> 
-            </td>
-            <td>     
-                <button type="button" onclick="myFunction()">5</button></th> 
-            </td>
-            <td>    
-                <button type="button" onclick="myFunction()">6</button></th> 
-            </td>
-            <td>    
-                <button type="button" onclick="myFunction()">/</button></th> 
-            </td>
-        </tr>
-        <tr>
-            <td> 
-                <button type="button" onclick="myFunction()">7</button></th> 
-            </td>
-            <td> 
-                <button type="button" onclick="myFunction()">8</button></th> 
-            </td>
-            <td>
-                <button type="button" onclick="myFunction()">9</button></th> 
-            </td>
-            <td>
-                <button type="button" onclick="myFunction()">=</button></th> 
-            </td>
-        </tr>
-    </table>
--->
+        <table>
+            <tr style="height:80px">
+                <th colspan="4">
+                    <p class="display-text borders" id="displayText"></p>
+                </th>
+            </tr>
+
+            <tr>
+                <td><input type="button" value="0" onclick="getNumber('0')"></td>
+                <td><input type="button" value="C" onclick="clearText()">
+                <td><input type="button" value="+" onclick="getNumber('add')"></td>
+                <td><input type="button" value="-" onclick="calculateType('subtract')"></td>
+            </tr>
+
+            <tr>
+                <td><input type="button" value="1" onclick="getNumber('1')"></td>
+                <td><input type="button" value="2" onclick="getNumber('2')"></td>
+                <td><input type="button" value="3" onclick="getNumber('3')"></td>
+                <td><input type="button" value="*" onclick="calculateType('multiply')"></td>
+            </tr>
+
+            <tr>
+                <td><input type="button" value="4" onclick="getNumber('4')"></td>
+                <td><input type="button" value="5" onclick="getNumber('5')"></td>
+                <td><input type="button" value="6" onclick="getNumber('6')"></td>
+                <td><input type="button" value="/" onclick="calculateType('divide')"></td>
+            </tr>
+
+            <tr>
+                <td><input type="button" value="7" onclick="getNumber('7')"></td>
+                <td><input type="button" value="8" onclick="getNumber('8')"></td>
+                <td><input type="button" value="9" onclick="getNumber('9')"></td>
+                <td><input type="button" value="=" onclick="finalResult()"></td>
+            </tr>
+        </table>
     </body>
 </html>
