--- a/ICR130/javascript/Calculator2/calculate.html
+++ b/ICR130/javascript/Calculator2/calculate.html
@@ -4,6 +4,7 @@
 
 <html lang="en-ca">
     <head>
+        <link rel="icon" type="image/x-icon" href="https://www.iconplc.com/site-files/cms-templates/img/brand-logos/ICON_positive_logo.svg">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,9 +16,27 @@
                 color: rgb(42, 16, 192);
             }
         </style>
-        <script src="./c.js"></script>   
+        <script src="./c.js"></script>
+        <script>
+            function clickCounter() {
+              if (typeof(Storage) !== "undefined") {
+                if (localStorage.clickcount) {
+                  localStorage.clickcount = Number(localStorage.clickcount)+1;
+                } else {
+                  localStorage.clickcount = 1;
+                }
+                document.getElementById("result").innerHTML = "You have clicked the button " + localStorage.clickcount + " time(s).";
+              } else {
+                document.getElementById("result").innerHTML = "Sorry, your browser does not support web storage...";
+              }
+            }
+            </script>
     </head>
     <body>
+        <p>
+            <button onclick="clickCounter()" type="button">Click me!</button>
+        </p>
+        <div id="result"></div>
     
         <h2>Calculator - 2</h2>
 
