--- a/ICR130/HTML Assignment/Pages/zhengwen.html
+++ b/ICR130/HTML Assignment/Pages/zhengwen.html
@@ -6,9 +6,15 @@
         <meta name="description" content="Prague Angel Wings" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="viewport" content="width=480" />
-        <link rel="stylesheet" href="templets/m2013/css/reset.css" />
-        <link rel="stylesheet" href="templets/m2013/css/mainCssRed.css" />
-        <script type="text/javascript" src="templets/m2013/js/MainJS.js"></script>
+        <link rel="stylesheet" href="css_js/reset.css" />
+        <link rel="stylesheet" href="css_js/mainCssRed.css" />
+        <!--
+        <script type="text/javascript" src="templets/m2013/js/klass.min.js"></script>
+        <script type="text/javascript" src="templets/m2013/js/jquery.min.js"></script>
+        <script type="text/javascript" src="templets/m2013/js/flexslider.js"></script>
+        -->
+
+        <script type="text/javascript" src="css_js/MainJS.js"></script>
         <!--        Hides URL bar on iPhone-->
         <script type="application/x-javascript">
             if (navigator.userAgent.indexOf('iPhone') != -1) {
@@ -32,23 +38,23 @@
 <div id="MainNav">
     <div class="flexslider-nav"> 
         <ul class="slides">
-                                    <li>
-                            <a href="zuopin.html">
-                                <p></p><p class="NavItemInfo">PHOTOS</p>
-                            </a>
-                            <a href="changjing.html">
-                                <p></p><p class="NavItemInfo">SCENSE</p>
-                            </a>
-                            <a href="huodong.html">
-                                <p></p><p class="NavItemInfo">EVENTS</p>
-                            </a>
-                            <a href="yuyue.html">
-                                <p></p><p class="NavItemInfo">SERVICE</p>
-                            </a>
-							 <a href="pinpai.html">
-                                <p></p><p class="NavItemInfo">BRAND</p>
-                            </a>
-                        </li>
+            <li>
+                <a href="pages/zuopin.html">
+                    <p></p><p class="NavItemInfo">PHOTOS</p>
+                </a>
+                <a href="pages/changjing.html">
+                    <p></p><p class="NavItemInfo">SCENSE</p>
+                </a>
+                <a href="pages/huodong.html">
+                    <p></p><p class="NavItemInfo">EVENTS</p>
+                </a>
+                <a href="pages/yuyue.html">
+                    <p></p><p class="NavItemInfo">SERVICE</p>
+                </a>
+                 <a href="pages/pinpai.html">
+                    <p></p><p class="NavItemInfo">BRAND</p>
+                </a>
+            </li>
         </ul>
     </div>
 </div>
