--- a/ICR130/HTML Assignment/Pages/zuopin.html
+++ b/ICR130/HTML Assignment/Pages/zuopin.html
@@ -6,9 +6,15 @@
         <meta name="description" content="" />
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="viewport" content="width=480" />
-        <link rel="stylesheet" href="templets/m2013/css/reset.css" />
-        <link rel="stylesheet" href="templets/m2013/css/mainCssRed.css" />
-        <script type="text/javascript" src="templets/m2013/js/MainJS.js"></script>
+        <link rel="stylesheet" href="css_js/reset.css" />
+        <link rel="stylesheet" href="css_js/mainCssRed.css" />
+        <!--
+        <script type="text/javascript" src="templets/m2013/js/klass.min.js"></script>
+        <script type="text/javascript" src="templets/m2013/js/jquery.min.js"></script>
+        <script type="text/javascript" src="templets/m2013/js/flexslider.js"></script>
+        -->
+
+        <script type="text/javascript" src="css_js/MainJS.js"></script>
         
         <!--        Hides URL bar on iPhone-->
         <script type="application/x-javascript">
@@ -35,19 +41,19 @@
     <div class="flexslider-nav"> 
         <ul class="slides">
             <li>
-                <a href="zuopin.html">
+                <a href="pages/zuopin.html">
                     <p></p><p class="NavItemInfo">PHOTOS</p>
                 </a>
-                <a href="changjing.html">
+                <a href="pages/changjing.html">
                     <p></p><p class="NavItemInfo">SCENSE</p>
                 </a>
-                <a href="huodong.html">
+                <a href="pages/huodong.html">
                     <p></p><p class="NavItemInfo">EVENTS</p>
                 </a>
-                <a href="yuyue.html">
+                <a href="pages/yuyue.html">
                     <p></p><p class="NavItemInfo">SERVICE</p>
                 </a>
-                    <a href="pinpai.html">
+                 <a href="pages/pinpai.html">
                     <p></p><p class="NavItemInfo">BRAND</p>
                 </a>
             </li>
@@ -105,7 +111,7 @@
         <!--    <a href="../../chat.looyu.com/chat/chat/p.do@c=49420&f=106259&g=66029" target="_blank"><img src="templets/m2013/img/socialIcons/zixun.png" alt="咨询" /></a>
             <a href="view.php@aid=478"><img src="templets/m2013/img/socialIcons/down.png" alt="" /></a>-->
             <a href="tel_3A4000571520"><img src="templets/m2013/img/socialIcons/tel.png" alt="" /></a>
-        </span>
+    </span>
 </div> 
     </body>
 </html>
