--- a/ICR130/HTML Assignment/index.html
+++ b/ICR130/HTML Assignment/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <title>HTML Assignment</title>
-		<meta name="description" content="The high-end brand of bridal photography in Vancouver, Vancouver wedding photography, each wedding photo has a real love story." />
-		<meta name="keywords" content="Vancouver bridal photography" />
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <meta name="viewport" content="width=480" />
-         <link rel="stylesheet" href="templets/m2013/css/reset.css" />
-        <link rel="stylesheet" href="templets/m2013/css/mainCssRed.css" />
-        <script type="text/javascript" src="templets/m2013/js/MainJS.js"></script>
+		<meta name="description" content="The high-end brand of bridal photography in Vancouver, Vancouver wedding photography, each wedding photo has a real love story."/>
+		<meta name="keywords" content="Vancouver bridal photography"/>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+        <meta name="viewport" content="width=480"/>
+        <link rel="stylesheet" href="css_js/reset.css"/>
+        <link rel="stylesheet" href="css_js/mainCssRed.css"/>
+        <script type="text/javascript" src="css_js/MainJS.js"></script>
         <!--        Hides URL bar on iPhone-->
         <script type="application/x-javascript">
             if (navigator.userAgent.indexOf('iPhone') != -1) {
@@ -22,22 +22,23 @@
             }
         </script>
     </head>
+    
     <body>
         <div id="indexWrapper">
-            <!--            Index BG SLider, Put here your images-->
+            <!--Index BG SLider, Put here your images-->
             <div id="IndexBGSlider" class="flexslider-bgslider"> 
                 <ul class="slides">
                 	<li>
                     	<a href="plus/list.php@tid=63" title="photo">
-                    		<img src="uploads/allimg/131206/1-1312061A3330-L.jpg" alt="photo" title="photo" border="0" />
+                    		<img src="img/116/1-1312061A3330-L.jpg" alt="photo" title="photo" border="0" />
                         </a>
                     </li><li>
                     	<a href="plus/list.php@tid=60" title="room">
-                    		<img src="uploads/allimg/131206/1-1312061A3150-L.jpg" alt="room" title="room" border="0" />
+                    		<img src="img/116/1-1312061A3150-L.jpg" alt="room" title="room" border="0" />
                         </a>
                     </li><li>
                     	<a href="plus/list.php@tid=61" title="outdoor">
-                    		<img src="uploads/allimg/131206/1-1312061A2550-L.jpg" alt="outdoor" title="outdoor" border="0" />
+                    		<img src="img/116/1-1312061A2550-L.jpg" alt="outdoor" title="outdoor" border="0" />
                         </a>
                     </li>
                     
@@ -45,41 +46,41 @@
             </div>
             <!--            headlineSection-->
             <div id="BigHeadline">
-                <h1><img src="templets/m2013/img/logo2.png" style="width:300px;height:100px;"></h1>
+                <h1><img src="img/ad/logo2.png" style="width:300px;height:100px;"></h1>
             </div> 
             <!--            Main Nav Section-->
             <div id="MainNavHome">
                 <div class="flexslider-nav"> 
                     <ul class="slides">
                         <li>
-                            <a href="zuopin.html">
-                                <p></p><p class="NavItemInfo">photo</p>
+                            <a href="pages/zuopin.html">
+                                <p></p><p class="NavItemInfo">PHOTO</p>
                             </a>
-                            <a href="changjing.html">
+                            <a href="pages/changjing.html">
                                 <p></p><p class="NavItemInfo">SCENSE</p>
                             </a>
-                            <a href="huodong.html">
+                            <a href="pages/huodong.html">
                                 <p></p><p class="NavItemInfo">EVENTS</p>
                             </a>
-                            <a href="yuyue.html">
+                            <a href="pages/yuyue.html">
                                 <p></p><p class="NavItemInfo">SERVICSE</p>
                             </a>
-							 <a href="pinpai.html">
+							 <a href="pages/pinpai.html">
                                 <p></p><p class="NavItemInfo">BRAND</p>
                             </a>
                         </li>
                     </ul>
                 </div>
             </div>
-            <!--            footer section
+            <!--            footer section-->
 <div id="footer" class="IndexFooter">
     <span>
-        <a href="../chat.looyu.com/chat/chat/p.do@c=49420&f=106259&g=66029" target="_blank"><img src="templets/m2013/img/socialIcons/zixun.png" alt="Inquiry" /></a>
-        <a href="tel_3A4000571520"><img src="templets/m2013/img/socialIcons/tel.png" alt="Call" /></a>
-        <a href="plus/view.php@aid=478"><img src="templets/m2013/img/socialIcons/down.png" alt="Inquiry" /></a>
+        <!--    <a href="../../chat.looyu.com/chat/chat/p.do@c=49420&f=106259&g=66029" target="_blank"><img src="templets/m2013/img/socialIcons/zixun.png" alt="咨询" /></a>
+            <a href="view.php@aid=478"><img src="templets/m2013/img/socialIcons/down.png" alt="" /></a>-->
+            <a href="tel_3A4000571520"><img src="img/ad/tel.png" alt="" /></a>
     </span>
 </div> 
--->
+
         </div>
     </body>
 </html>
